ContributorModal: Fix Link Spacing

--- a/src/components/settings/tabs/plugins/ContributorModal.css
+++ b/src/components/settings/tabs/plugins/ContributorModal.css
@@ -41,6 +41,8 @@
 }
 
 .vc-author-modal-links {
+    display: flex;
+    gap: 6px;
     margin-left: auto;
 }
 
